# metakb

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pediatric dataset annotations.csv  Pipfile  Procfile  README.md  __init__.py  base.py  compose-dev.yaml  compose.yaml  discover_normalizer_paths.sh  manifest.json  new_query.py  package.json  parser.py  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_fixture.JSON  turbo.json
server/: .env.example  Pipfile  Procfile  package.json  pyproject.toml  search.cypher  test_load.py
server/.ebextensions/: 00_metakb_log.config  01_build.config  02_data_downloads.config
server/src/metakb/: __init__.py  cli.py  config.py  database.py  load_data.py  log_config.py  log_handle.py  main.py  normalizers.py  query.py  restapi.py  source_data.py  utils.py
server/src/metakb/database/: __init__.py  connection.py  graph.py  load.py  models.py
server/src/metakb/database/queries/: initialize.cql
server/src/metakb/harvesters/: __init__.py  base.py  cbioportal.py  cbp_transformer_gene_object.ipynb  cell_lines_removed.csv  civic.py  fda_poda.py  final_cbp_df.csv  mci.py  moa.py  mut_dupes.csv  patient_variant_dupes.csv  poda.py  poda_dev_sandbox.ipynb  scratch.ipynb  test_file.xlsx
server/src/metakb/repository/: __init__.py  base.py  load_disease.cypher  neo4j_models.py  neo4j_repository.py
server/src/metakb/repository/queries/: __init__.py  catalog.py  delete_evidence_line.cypher  get_all_assertion_ids.cypher  get_counts.cypher  get_gene.cypher  get_statements.cypher  initialize.cypher  load_condition_set.cypher  load_definingalleleconstraint_catvar.cypher  load_disease.cypher  load_document.cypher  load_drug.cypher  load_evidence_line.cypher  load_featurecontextconstraint_catvar.cypher  load_gene.cypher  load_method.cypher  load_phenotype.cypher  load_statement.cypher  load_statement_assertion.cypher  load_statement_evidence.cypher  load_strength.cypher  load_text_catvar.cypher  load_therapy_group.cypher  search_statements.cypher  teardown.cypher  update_assertion_properties.cypher  update_assertion_strength.cypher
server/src/metakb/restapi/: __init__.py  dependencies.py  meta.py  search.py
server/src/metakb/schemas/: api.py  app.py  data.py
server/src/metakb/services/: __init__.py  fetch_entities.py  load_data.py  manage_data.py  search.py
server/src/metakb/transformers/: __init__.py  base.py  catvars.py  cbioportal.py  cbp_es_dfarber_broad_2014.py  cdm.py  civic.py  fda_poda.py  identifiers.py  methodology.py  moa.py  phenotypes.py  schema.py
server/src/metakb/transformers/cbioportal/: __init__.py  base.py  transformer_all_phase2_target_2018.py  transformer_all_phase2_target_2018_pub.py  transformer_all_stjude_2015.py  transformer_all_stjude_2016.py  transformer_aml_target_2018_pub.py  transformer_chl_sccc_2023.py  transformer_es_dfarber_broad_2014.py  transformer_es_iocurie_2014.py  transformer_lgg_ctf_synodos_2025.py  transformer_mbl_pcgp.py  transformer_mixed_pipseq_2017.py  transformer_nbl_target_2018_pub.py  transformer_pancan_mappyacts_2022.py  transformer_pancan_pdx_uthsa_2023.py  transformer_pediatric_dkfz_2017.py  transformer_pptc_2019.py  transformer_rt_target_2018_pub.py  transformer_wt_target_2018_pub.py
server/src/metakb/transformers/hmc_notebooks/: column_value_counts.txt  fetch-mutations-example.ipynb  output1_femaleX.csv  output1_femaleX_orig.csv  output2.csv  output2_new_chr23_boolean_cols.csv  output_post_23_correction.csv  patient_variant_dupes.csv  pybioportal_CHOP_pptc_2019.ipynb  transformer_all_phase2_target_2018_pub.ipynb  transformer_aml_target_2018_pub.ipynb  transformer_es_iocurie_2014.ipynb  transformer_mbl_pcgp_2012.ipynb  transformer_mixed_pipseq_2017.ipynb  transformer_nbl_target_2018_pub.ipynb  transformer_pediatric_dkfz_2017.ipynb  transformer_pptc_2019.ipynb  transformer_rt_target_2018_pub.ipynb  transformer_wt_target_2018_pub.ipynb
server/src/metakb/wt_target_2018_pub/: data_clinical_patient.txt
server/tests/: __init__.py  conftest.py
server/tests/data/: conditions.json  statements_to_load.json
server/tests/data/cbioportal/: cbioportal_all_stjude_2015_data_clinical_patient.txt  cbioportal_all_stjude_2015_data_clinical_sample.txt  cbioportal_all_stjude_2015_data_mutations.txt  cbioportal_all_stjude_2015_meta_study.txt
server/tests/data/general/: service_info_openapi.yaml
server/tests/data/harvesters/civic/: civic_eid_3017.json  (+1 more)
server/tests/data/repository/: assertions.json  cdm.json
server/tests/data/services/: loadable_statements_input.json  statements_to_load.json
server/tests/data/transformers/: README.md  base_build_statements_input.json  base_construct_statements_input.json  base_normalize_condition_input.json  base_normalize_therapeutic_input.json  civic_ensure_conditionset_id_input.json  civic_ensure_therapygroup_id_input.json  civic_normalize_variant_input.json  generate_civicpy_cache.py  methodology_input.json  moa_create_variants_input.json  moa_harvested_data.json  moa_normalize_variants_input.json
server/tests/unit/: test_api.py  test_load.py  test_repository_utils.py
server/tests/unit/database/: test_database.py
server/tests/unit/harvesters/: test_cbioportal_harvester.py  test_civic_harvester.py  test_fda_poda_harvester.py  test_moa_harvester.py
server/tests/unit/repository/: test_neo4j_repository.py
server/tests/unit/search/: test_batch_search_statements.py  test_search_statements.py  utils.py
server/tests/unit/services/: test_batch_search_statements.py  test_manage_data.py  test_search_statements.py  utils.py
server/tests/unit/setup/: test_minimal_setup.py
server/tests/unit/transformers/: conftest.py  test_base.py  test_base_transformer.py  test_catvars.py  test_civic.py  test_civic_transformer_diagnostic.py  test_civic_transformer_prognostic.py  test_civic_transformer_therapeutic.py  test_methodology.py  test_moa.py  test_moa_transformer_prognostic.py  test_moa_transformer_therapeutic.py
(+759 files in other folders)
