[metadata]
name = metakb
author = VICC
author_email = help@cancervariants.org
description = A search interface for cancer variant interpretations assembled by aggregating and harmonizing across multiple cancer variant interpretation knowledgebases.
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/metakb
license_files = LICENSE
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

install_requires =
    civicpy ~= 3.0.0
    ga4gh.vrs ~= 0.8.1
    ga4gh.vrsatile.pydantic ~= 0.0.12
    gene-normalizer[etl] ~= 0.1.36
    variation-normalizer ~= 0.5.5
    disease-normalizer[dev] ~= 0.2.20
    thera-py[dev] ~= 0.3.10
    requests
    requests-cache
    jsondiff
    pydantic
    uvicorn
    fastapi
    asyncclick
    neo4j
    boto3
    botocore

[options.extras_require]
dev =
    pre-commit
    flake8
    flake8-docstrings
    ipykernel

tests =
    pytest
    pytest-cov
    mock
    pytest-asyncio

[tool:pytest]
addopts = --ignore=setup.py --ignore=docs/__authors__.py --ignore=docs/conf.py --ignore analysis/ --ignore codebuild/ --doctest-modules --cov-report term-missing --cov .
