[metadata]
name = metakb
author = VICC
author_email = help@cancervariants.org
description = A search interface for cancer variant interpretations assembled by aggregating and harmonizing across multiple cancer variant interpretation knowledgebases.
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/metakb
license-file = LICENSE
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

install_requires =
    ga4gh.vrs ==0.8.0dev0
    civicpy ~=3.0.0
    requests
    jsondiff
    pydantic
    requests-cache
    gene-normalizer[dev] ==0.1.30
    disease-normalizer[dev] ==0.2.15
    thera-py[dev] ==0.3.7
    neo4j
    uvicorn
    fastapi
    asyncclick
    boto3
    botocore
    variation-normalizer ==0.5.1
    ga4gh.vrsatile.pydantic ==0.0.11

tests_require =
    pytest
    pytest-cov
    mock
    pytest-asyncio

[tool:pytest]
addopts = --ignore=setup.py --ignore=docs/__authors__.py --ignore=docs/conf.py --ignore analysis/ --ignore codebuild/ --doctest-modules --cov-report term-missing --cov .
