[metadata]
name = metakb
author = VICC
author_email = help@cancervariants.org
description = A search interface for cancer variant interpretations assembled by aggregating and harmonizing across multiple cancer variant interpretation knowledgebases.
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/metakb
license-file = LICENSE
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

install_requires =
    ga4gh.vrs ~=2.0.0.dev1
    civicpy ~=3.0.0
    gene-normalizer ~=0.3.0-dev1
    disease-normalizer ~=0.4.0.dev0
    requests
    jsondiff
    pydantic ==2.*
    requests-cache
    neo4j
    uvicorn
    fastapi
    asyncclick
    boto3
    botocore

[options.extras_require]
test =
    mock
    pytest
    pytest-cov
    pytest-asyncio

dev =
    flake8
    flake8-docstrings
    ipykernel
    pre-commit

[tool:pytest]
addopts = --ignore=setup.py --ignore=docs/__authors__.py --ignore=docs/conf.py --ignore analysis/ --ignore codebuild/ --doctest-modules --cov-report term-missing --cov .
