[project]
name = "metakb"
version = "2.0.0-a1"
authors = [
    {name = "Alex H Wagner"},
    {name = "Kori Kuzma"},
    {name = "James Stevenson"},
    {name = "Brian Walsh"},
    {name = "Jeff Liu"},
    {name = "Matthew Cannon"},
    {name = "Katie Stahl"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "A search interface for cancer variant interpretations assembled by aggregating and harmonizing across multiple cancer variant interpretation knowledgebases."
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "ga4gh.vrs>=2.2.0,<3.0",
    "ga4gh.cat_vrs~=0.7.2",
    "ga4gh.va_spec~=0.4.3",
    "cool-seq-tool ~= 0.16.0",
    "gene-normalizer[etl]~=0.11.5",
    "variation-normalizer~=0.15.4",
    "disease-normalizer[etl]~=0.11.2",
    "thera-py[etl]~=0.11.0",
    "civicpy~=5.3.0",
    "requests",
    "pydantic==2.*",
    "pydantic-settings",
    "requests-cache",
    "neo4j==5.*",
    "uvicorn",
    "fastapi",
    "boto3",
    "botocore",
    "click",
    "jinja2",
    "pandas>=2.3.3, <3.0",
    "async-lru",
    "tqdm",
]

[project.optional-dependencies]
deploy = [
    "uvloop",
    "websockets",
    "httptools",
    "typing-extensions",
]
tests = [
    "pytest",
    "pytest-cov",
    "mock",
    "pytest-asyncio",
    "deepdiff",
    "httpx",
    "jsonschema~=4.24",  # pin to avoid deprecation of ref resolver
    "pyyaml",
]
dev = [
    "prek>=0.2.23",
    "ruff==0.14.10",
    "fastapi[standard]",
    "ipdb",
    "psycopg2-binary>=2.9.10",
]
codegen = [
    "pydantic-to-typescript>=2.0.0",
    "astor>=0.8.1",
    "typing_extensions>=4.8.0",
]
notebooks = ["ipykernel", "jupyterlab"]
docs = [
    "sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo==2023.3.27",
    "sphinx-github-changelog==1.2.1",
    "sphinx-click==5.0.1",
    "sphinxcontrib-images==1.0.1",
]

[project.urls]
Homepage = "https://github.com/cancervariants/metakb"
Documentation = "https://github.com/cancervariants/metakb"
Changelog = "https://github.com/cancervariants/metakb/releases"
Source = "https://github.com/cancervariants/metakb"
"Bug Tracker" = "https://github.com/cancervariants/metakb/issues"

[project.scripts]
metakb = "metakb.cli:cli"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metakb = ["*.cypher"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing -m 'not ci_only'"
testpaths = ["tests"]
markers = [
    "ci_ok: tests safe to run in CI",
    "ci_only: run only in CI",
]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]
exclude = ["../docs/*", "codebuild/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# S101 - assert
# B011 - assert-false
# D100 - undocumented-public-module
# D102 - undocumented-public-class
# D103 - undocumented-public-function
# D104 - undocumented-public-package
# INP001 - implicit-namespace-package
# ARG001 - unused-function-argument
# SLF001 - private-member-acces
# N815 - mixed-case-variable-in-class-scope
# PLR2004 - magic-value-comparison
"tests/*" = [
    "ANN001",
    "ANN2",
    "S101",
    "B011",
    "D100",
    "D102",
    "D103",
    "D104",
    "INP001",
    "SLF001",
    "ARG001",
    "PLR2004",
]
"src/metakb/schemas/*" = ["ANN102", "N815"]
"src/metakb/repository/queries/catalog.py" = ["D103"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
